fixtures/runtime/valid/functions/simple.php
<?php
function hello()
{
    return "hi";
}

echo hello(), "\n";
