fixtures/runtime/invalid/functions/call-stack-error.php
<?php
function boom()
{
    echo 1 / 0;
}

function wrap()
{
    boom();
}

wrap();
